<resources>
    <string name="app_name">Hu032WidgetRadio</string>
    <string name="greeting">안녕하세요!</string>
    <string name="my_greeting">God is good all the time!</string>
    <string name="select_car">Select your favorite to drive ...</string>
    <string name="genesis">Genesis</string>
    <string name="mustang">Mustang</string>
    <string name="lamborghini">Lamborghini</string>
    <string name="bentley">Bentley</string>
    <string name="allday">하루종일</string>
    <string name="your_choice">"Your Choice: "</string>
</resources>